# plotive-js

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  vite.config.ts
examples/: README.md
examples/basic/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/basic/src/: main.ts
examples/multiple-axes/: index.html  pnpm-lock.yaml  tsconfig.json
examples/multiple-axes/src/: main.ts
examples/sine/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/sine/src/: main.ts
plotive-wasm/: Cargo.toml
plotive-wasm/src/: js_annot.rs  js_axis.rs  js_fig.rs  js_series.rs  js_style.rs  lib.rs
scripts/: clean-dist.mjs  copy-cjs-entry.mjs  copy-wasm-node.mjs  copy-wasm.mjs  rename-esm-to-mjs.mjs
src/: annot.ts  axis.ts  color.ts  index.cjs  index.cts  index.ts  series.ts  style.ts
