[package]
name = "plotive-wasm"
version = "0.1.0"
authors = ["Rémi Thebault <remi.thebault@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.22.1"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.91"
plotive = { version = "0.4.0", features = [
    "noto-mono",
    "noto-sans",
    "noto-sans-italic",
    "noto-serif",
    "noto-serif-italic",
    "time"
] }
plotive-pxl = { version = "0.4.0" }
plotive-svg = { version = "0.4.0" }
plotive-text = { version = "0.4.0" }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.91", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
